k8s/web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: project-web
  template:
    metadata:
      labels:
        app: project-web
    spec:
      containers:
        - name: project-web
          image: ghcr.io/cis1880/gpt-code-critic/app:IMAGE_TAG
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: docker-pull-secret
---
apiVersion: v1
kind: Service
metadata:
  name: project-web
spec:
  selector:
    app: project-web
  ports:
    - port: 8000
